<resources>
    <string name="app_name">1SANMATEO</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="password_reset">Password Reset</string>
    <string name="online_mode">Online Mode</string>
    <string name="sms_mode">SMS Mode</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_from_gallery_incidents">Select From Gallery</string>
    <string name="home_dashboard">Home: Dashboard</string>
    <string name="incident_report">Incident Report</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="forgot_password_caps">FORGOT YOUR PASSWORD?</string>
    <string name="forgot_password_header">Forgot Password</string>
    <string name="hint_your_email">Please enter your email</string>
    <string name="view_all">VIEW ALL</string>
    <string name="detecting_location">Detecting your location...</string>
    <string name="incident_offline">You are offline. Please connect to the internet to load content.</string>
    <string name="image_disabled">IMAGE ATTACHMENT FEATURE NOT AVAILABLE IN SMS MODE</string>
    <string name="hint_location">Type your current location</string>
    <string name="select_incident">Select an Incident Type</string>
    <string name="traffic_road">Traffic/Road</string>
    <string name="solid_waste">Solid Waste</string>
    <string name="flooding">Flooding</string>
    <string name="fire">Fire</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="action_message">I-text si Mayor</string>
    <string name="action_file_incident">File Incident Report</string>
    <string name="action_call_pnp">Call PNP</string>
    <string name="action_call_fire_department">Call Fire Department</string>
    <string name="action_call_icco">Call ICCO</string>
    <string name="action_call_rescue">Call Rescue</string>
    <string name="action_send_sos">Send SOS</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email Address</string>
    <string name="login_message_loading">Logging in.</string>
    <string name="login_message_failed">Login Failed</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="nav_home">Home: Dashboard</string>
    <string name="nav_incidents">Incident Reports</string>
    <string name="nav_emergency">Emergency Contact Details</string>
    <string name="nav_directory">Directory</string>
    <string name="nav_map">Map</string>
    <string name="registration">Registration</string>
    <string name="user_info">Your Information</string>
    <string name="user_account">Your Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nick_name">Nick Name</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="contact_no">Contact No</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_my_account">Create my account</string>
    <string name="select_gender">Select Gender</string>
    <string name="email_address">Email Address</string>
    <string name="read_more">READ MORE</string>
    <string name="alert_email">Invalid email address.</string>
    <string name="alert_email_taken">Email address is already taken.</string>
    <string name="email_taken_error">Email already taken</string>
    <string name="alert_password_extra_char">Password contains invalid characters.</string>
    <string name="alert_password_short">Password is too short.</string>
    <string name="alert_password_long">Password is too long.</string>
    <string name="alert_password_not_match">Password do not match.</string>
    <string name="password_disclaimer">Password must be 8-12 characters long and contains letters and numbers only.</string>
    <string name="password_confirm">Confirm your password by entering it again.</string>
    <string name="registration_step_1">Step 1 of 2: Personal Information</string>
    <string name="registration_step_2">Step 2 of 2: Account Information</string>
    <string name="registration_success_title">Congratulations!</string>
    <string name="registration_success_content">Your account has been created. Click on the activation link which we have sent to your inbox to start using the app.</string>
    <string name="registration_success_confirm">BACK TO LOGIN</string>
    <string name="report_sent">Report sent</string>
    <string name="report_sent_content">Thank you for submitting your report. The San Mateo ICCO will investigate the matter.</string>
    <string name="report_sent_confirm">BACK TO INCIDENTS NEWSFEED</string>
    <string name="password_reset_sub_header">Enter your email address</string>
    <string name="reset_password">reset password</string>
    <string name="reset_password_title">Reset link sent</string>
    <string name="reset_password_content">We have sent a password reset link to your inbox. Click this link to provide a new password for your account.</string>
    <string name="reset_password_confirm">BACK TO LOGIN</string>
    <string name="alert_no_such_email">Email address is not a registered account.</string>
    <string name="welcome_to">Welcome to</string>
    <string name="san_mateo">San Mateo Rizal</string>
    <string name="official_mobile_app">Official Mobile App</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="welcome">Welcome!</string>
    <string name="incident_report_by">Incident report by</string>
    <string name="malicious_report_by">Malicious report by</string>
    <string name="reported_by">Reported By</string>
    <string name="share_via_fb">Share</string>
    <string name="report_this">Report</string>
    <string name="file_incident_report_header">File incident report</string>
    <string name="incident_description">Write something about the incident</string>
    <string name="incident_address">Location of incident</string>
    <string name="select_incident_type">Select incident type</string>
    <string name="add_photo">+\nAdd Photo</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="file">File</string>
    <string name="cancel">Cancel</string>
    <string name="note_before_filing_of_report"><b>NOTE : </b><i>Please be advised that reports
                having malicious contents or false reports are subjected for deletion and you may
                also be banned from the Community.</i></string>
    <string name="i_understand">I Understand</string>
    <string name="fb_app_id">1183940438317855</string>
    <string name="report_incident_report_header">Report this Incident</string>
    <string name="remarks">Remarks</string>
    <string name="submit">Submit</string>
    <string name="note_before_reporting_incident"><b>NOTE : </b><i>Please be advised that your report
         for this incident report is still be reviewed by the admins.</i></string>
    <string name="block_this_report">Block</string>
    <string name="approve_report">Approve</string>
    <string name="disapprove_report">Disapprove</string>
    <string name="block">Block</string>
    <string name="Unblock">Unblock</string>
    <string name="panic_settings_header">Emergency contacts</string>
    <string name="no_contacts">No contact/s found!</string>
    <string name="select_contact">Select</string>
    <string name="instructions">Choose a contact person/s to your phone directory\n\n
        <b>Disclaimer:</b>\nSending emergency message to your assigned contact/s will incur regular sms load to your network credit.\n\n
    </string>
    <string name="close">Close</string>
    <string name="text_si_mayor">I-txt mo si Mayor</string>
    <string name="text_message">Your message here</string>
    <string name="send">Send</string>
    <string name="text_disclaimer">
        <b>Note:</b>
            <i>For citizen’s reporting of Incident/Accident (fire, crimes, traffic, disaster, others)
                please use the Incident Report in the slider menu of the app but will need internet
                connection to be able to send specific report. </i>\n\n
        <b>DISCLAIMER : </b>
        <i>Sending sms message to the Mayor will incur regular sms load to your network credit\n</i>
    </string>
    <string name="change_profile_pic">Change profile pic</string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="eula">End User License Agreement</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin congue efficitur urna, sit amet euismod lacus cursus sed. Nullam nunc dui, lacinia id dignissim id, venenatis sit amet enim. Curabitur ultrices convallis maximus. Curabitur nec metus et mi faucibus molestie. Nulla placerat facilisis mi, a gravida ipsum sodales at. Phasellus ultricies arcu iaculis est sollicitudin egestas. Sed lacinia nisi felis, eu hendrerit sem varius ut. Maecenas luctus leo sapien, a laoreet dui dictum in. Donec id odio imperdiet, vestibulum felis vel, laoreet massa. Morbi efficitur sodales efficitur. Morbi luctus rutrum lacus sit amet sagittis. In vitae condimentum sem, sit amet dictum diam.
        \n\nMorbi venenatis scelerisque odio a hendrerit. Donec sit amet est laoreet, facilisis neque et, dictum metus. In non scelerisque nisi, quis faucibus sem. In sed lectus aliquet est dapibus pretium. Etiam porta eros in nunc finibus, vitae pharetra est viverra. Etiam ullamcorper cursus ex et scelerisque. Mauris eros ipsum, vestibulum vitae ullamcorper sed, dignissim vel est.</string>
</resources>