<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- header -->
    <TextView
        fontPath="fonts/Roboto-Medium.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:text="@string/panic_settings_header"
        android:textColor="@color/text_action_blue_dark"
        android:textSize="@dimen/_20sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:text="@string/instructions"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_11sdp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_select"
                fontPath="fonts/Roboto-Light.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal"
                android:background="@color/text_action_blue"
                android:text="@string/select_contact"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp" />

            <Button
                android:id="@+id/btn_close"
                fontPath="fonts/Roboto-Light.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal"
                android:background="@color/text_action_blue_dark"
                android:text="@string/close"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_no_contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/ll_menu"
            android:gravity="center"
            android:text="@string/no_contacts"
            android:textSize="@dimen/_20sdp" />

        <ListView
            android:id="@+id/lv_contacts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/ll_menu"
            android:visibility="gone">

        </ListView>

    </RelativeLayout>

</LinearLayout>