<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <!-- header -->
        <TextView
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/text_si_mayor"
            android:textColor="@color/text_action_blue_dark"
            android:textSize="@dimen/_25sdp" />

        <!-- classification -->
        <Spinner
            android:id="@+id/spnr_classification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownWidth="match_parent"/>

        <!-- text message body -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            android:theme="@style/FieldsStyle"
            app:hintTextAppearance="@style/FloatingLabelStyle">

            <EditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_message"
                android:imeOptions="actionDone"
                android:inputType="textCapWords"
                android:paddingTop="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_10sdp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_9sdp"
            android:text="@string/text_disclaimer"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_send"
            fontPath="fonts/Roboto-Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:background="@color/text_action_blue"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp" />

        <Button
            android:id="@+id/btn_cancel"
            fontPath="fonts/Roboto-Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:background="@color/text_action_blue_dark"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

</LinearLayout>

