<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:gravity="center"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_san_mateo_logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true" />

            <ProgressBar
                android:id="@+id/pb_load_image"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerInParent="true" />
        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_to"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/san_mateo"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/official_mobile_app"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

</LinearLayout>