<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="64dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:id="@+id/ll_traffic"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_camera_24dp" />

            <TextView
                android:id="@+id/tv_online_mode"
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24sp"
                android:gravity="center_vertical"
                android:text="@string/traffic_road"
                android:textColor="@color/text_action_blue"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_solid_waste"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_camera_24dp" />

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:gravity="center_vertical"
                android:text="@string/solid_waste"
                android:textColor="@color/text_action_blue"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_flooding"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_camera_24dp" />

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:gravity="center_vertical"
                android:text="@string/flooding"
                android:textColor="@color/text_action_blue"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_fire"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_camera_24dp" />

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:gravity="center_vertical"
                android:text="@string/fire"
                android:textColor="@color/text_action_blue"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_miscellaneous"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_camera_24dp" />

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:gravity="center_vertical"
                android:text="@string/miscellaneous"
                android:textColor="@color/text_action_blue"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>