<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_no_navbar"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/black_gradient_drawable"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_sign_in"
                    fontPath="fonts/Roboto-Medium.ttf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:background="@drawable/button_white_clickable"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:text="@string/login"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12ssp" />

                <Space
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_create_account"
                    fontPath="fonts/Roboto-Medium.ttf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:background="@drawable/button_moss_green_clickable"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:id="@+id/tv_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/forgot_password_caps"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>